# djangotest

./: db.sqlite3  pyproject.toml
app/: admin.py  forms.py  models.py  views.py
app/migrations/: 0001_initial.py
djangotest/: settings.py  urls.py
templates/app/: article_create.html  home.html
