[project]
name = "djangotest"
version = "0.1.0"
description = ""
authors = [
    {name = "Valentyn",email = "valentyn.varenikov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "djangotest", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
